--- a/css/styles.css
+++ b/css/styles.css
@@ -612,7 +612,7 @@ html::before {
 
     .table-container {
         max-height: calc(85vh - 100px);
-        overflow-y: auto; /* Ensure the scrollbar is visible */
+        scrollbar-color: var(--color-charcoal-700);
     }
 }
 
