Updated scroll bar styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -584,16 +584,12 @@ html::before {
 
 .table-container {
     max-height: calc(85vh - 100px);
-    overflow-y: auto; /* Ensure the scrollbar is visible */
+    overflow-y: overlay; /* Integrates the scrollbar into the content */
 }
 
 /* Custom scrollbar styles for WebKit browsers (iOS, Safari, Chrome) */
 .table-container::-webkit-scrollbar {
     width: 8px; /* Width of the scrollbar */
-}
-
-.table-container::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Light grey background for the track */
 }
 
 .table-container::-webkit-scrollbar-thumb {
